--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,6 +18,7 @@ spring.security.user.password=abc
 # spring redis config
 spring.redis.host=localhost
 spring.redis.port=6379
+spring.redis.password=
 spring.redis.timeout=60000
 spring.redis.type=redis
 
